--- a/hello.html
+++ b/hello.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Welcome to my Website </h1>
+     <h2>This is second hadding</h2>
     <p>This html page for git a course on html with python & javascript by harvard university on edx.com</p>
 </body>
 </html>
