--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Welcome to my Website </h1>
      <h2>This is second hadding</h2>
-      <h3>This is third hadding</h>
+      <h3>This is 3 hadding</h>
     <p>This html page for git a course on html with python & javascript by harvard university on edx.com</p>
 </body>
 </html>
