--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
     <title>Helow</title>
 </head>
 <body>
-    <h1>Welcome to my Website </h1>
+    <h1 style="color:red;">Welcome to my Website </h1>
      <h2>This is second hadding</h2>
       <h3>This is 3 hadding</h>
     <p>This html page for git a course on html with python & javascript by harvard university on edx.com</p>
